@startuml Database

entity EntryTransaction {
  * id
  __
  * transaction_number
  capture_vehicle
}

entity OutTransaction {
  * id
  __
  * plat_number
  price
  * entry_transaction_id
  * type_vehicle_id
  * user_id
}

entity User {
  * id
  __
  * name
  * phone
  * email
  * status
  * password
  * role_id
}

entity Role {
  * id
  __
  * name
}

entity TypeVehicle {
  * id
  __
  * type
}

entity ParkingFee {
  * id
  __
  * price
  * time_period
}

entity Member {
  * id
  __
  * name
  * phone
  * exp_date
  * type_member_id
}

entity Vehicle {
  * id
  __
  * plat_number
  * member_id
  * out_transaction_id
  * type_vehicle_id
}

entity TypeMember {
  * id
  __
  * type
  * description
  * price
}

entity MaxVehicle {
  * id
  __
  * max
  * type_member_id
  * type_vehicle_id
}

entity TopUp {
  * id
  __
  * amount
  * exp_date
  * member_id
  * user_id
}

entity Expense {
  * id
  __
  * description
  * amount
  * user_id
}

entity Mutation {
  * id
  __
  * type
  * amount
  out_transaction_id
  expense_id
  top_up_id
}

EntryTransaction ||--|| OutTransaction
OutTransaction ||--|| Mutation
OutTransaction ||--|{ Vehicle
OutTransaction ||--|{ ParkingFee
OutTransaction ||--|{ User
OutTransaction ||--|{ TypeVehicle
TypeVehicle }|--|| Vehicle
TypeVehicle }|--|| MaxVehicle
User ||--|{ Role
User }|--|| TopUp
User }|--|| Expense
Member }|--|| TopUp
Member ||--|| TypeMember
Member }|--|| Vehicle
Expense ||--|| Mutation
TypeMember }|--|| MaxVehicle
TopUp ||--|| Mutation